--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -300,7 +300,7 @@
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 0;
-    width: 140px;
+	width: 140px;
     height: 80px;
     position: relative;
     z-index: 9;
@@ -325,18 +325,20 @@
     color: #EFBB20;
     letter-spacing: 20px;
 }
+
 .is-fixed .menu-logo{
     height: 70px;
-    width: 140px;
+	width: 140px;
 	transition:all 0.5s;
 	-webkit-transition:all 0.5s;
 	-moz-transition:all 0.5s;
 	-o-transition:all 0.5s;
 }
+
 @media only screen and (max-width: 767px) {
     .menu-logo,
 	.is-fixed .menu-logo{
-        width: 100px;
+		width: 100px;
 		max-width: 100px;
 		height:50px;
     }
@@ -1824,7 +1826,7 @@ button.back-to-top {
     border-width: 0;
     bottom: 15px;
     box-shadow: 2px 2px 12px -5px #000000;
-    color: #fff;
+	color: black;
     cursor: pointer;
     display: none;
     height: 40px;
