--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1878,7 +1878,7 @@ button.back-to-top {
     top: 0;
     opacity: 1;
     z-index: 999999999;
-    background-image: url(../images/loading.gif);
+	background-image: url(../../../assets/images/loading3.gif);
     background-repeat: no-repeat;
     background-size: 60px;
     background-position: center;
