--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3400,3 +3400,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#391800', end
 		margin-bottom: 5px;
 	}
 
+@media only screen and (max-width: 570px){
+	#msg1{
+		
+	padding-right: 3rem;
+	}
+	/* .principal_img{
+		width: 430px;
+	} */
+}
+@media only screen and (max-width: 770px){
+	#msg1{
+		
+	padding-right: 3rem;
+	}
+	/* .principal_img{
+		width: 430px;
+	} */
+}
