--- a/assets/css/color/color-1.css
+++ b/assets/css/color/color-1.css
@@ -103,7 +103,7 @@ h6 a:hover,
 .ovpr-dark:after,
 .ovpr:after,
 .bg-primary {
-    background-color: #596418;
+    background-color: #ffbc63;
 }
 
 .footer-top,
