--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@
 }
 
 
+
 .bg-fix {
     background-attachment: fixed;
     background-size: cover;
@@ -2182,6 +2183,14 @@ footer .widget_services ul li:hover {
     font-weight: 400;
 }
 
+.name-highlight {
+    background: -webkit-linear-gradient(top right, rgba(18, 55, 246, 1),
+            rgba(9, 244, 244, 1));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
 /* Subscribe Form */
 .subscribe-form input {
     background-color: rgba(0, 0, 0, 0.2);
@@ -2271,7 +2280,7 @@ button.back-to-top {
 }
 
 /*==== LOADING ====*/
-/* #loading-icon-bx {
+#loading-icon-bx {
     width: 100%;
     height: 100%;
     background-color: #fff;
@@ -2280,11 +2289,11 @@ button.back-to-top {
     top: 0;
     opacity: 1;
     z-index: 999999999;
-    background-image: url(../images/loading3.gif);
+    background-image: url(../images/pre-loaders/loading3.gif);
     background-repeat: no-repeat;
     background-size: 20rem;
     background-position: center;
-} */
+}
 
 .preloader {
     position: fixed;
@@ -2307,7 +2316,7 @@ button.back-to-top {
     background-size: 20rem;
     background-position: center center;
     background-repeat: no-repeat;
-    background-image: url(../images/loading3.gif);
+    background-image: url(../images/pre-loaders/loading3.gif);
     -webkit-transition: all 200ms ease;
     -moz-transition: all 200ms ease;
     -ms-transition: all 200ms ease;
@@ -3728,6 +3737,8 @@ button.back-to-top {
 .account-form-inner {
     width: 100%;
     align-self: center;
+    margin-top: 4rem;
+    margin-left: auto;
 }
 
 .account-container {
