--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4221,3 +4221,9 @@ button.back-to-top {
     position: relative;
   }
 }
+
+.wrapper form.disabled {
+  pointer-events: none;
+  opacity: 0.7;
+  color: black;
+}
